Fixed the Delete buttons for the URLs and the Folders

--- a/options.html
+++ b/options.html
@@ -6,13 +6,21 @@
         <link rel="stylesheet" href="css/options.css">
     </head>
     <body>
-        <h2>Options</h2>
+        <div id="mainBody">
+            <h3>Options</h3>
+            <hr>
 
-        <div class="css-treeview">
-            <ul id="list">
+            <h5>Stash</h5>
 
-            </ul>
+            <div class="css-treeview">
+                <ul id="list">
+
+                </ul>
+            </div>
+
+
         </div>
+
 
     </body>
     <script type="application/javascript" src="js/jquery.min.js"></script>
