--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Stashio</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <button id="save">Save</button>
-    <button id="saveall">Save All</button>
-    <button id="time">Time</button>
-    <button id="getStorage">GET</button>
-    <button id="clear">Clear</button>
-    <button id="size">Size</button>
+    <div id="mainPopup">
+        <h4>Stashio</h4>
+        <!--<p>Save tabs URL to your Stash.</p>-->
+
+        <div class="actions">
+            <button class="btn" id="save">Save Current Tab</button>
+            <button class="btn" id="saveall">Save All Tabs</button>
+        </div>
+
+        <div class="actions">
+            <a href="options.html" id="view-options" target="_blank">View Stash</a>
+        </div>
+        <p id="message"></p>
+    </div>
+
 </body>
     <script type="application/javascript" src="js/jquery.min.js"></script>
     <script type="application/javascript" src="js/popup.js"></script>
