Added Storage Details

--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Stashio</title>
-        <link rel="stylesheet" href="css/options.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div id="mainBody">
@@ -17,6 +17,25 @@
 
                 </ul>
             </div>
+
+            <br>
+            <hr>
+            <h5>Storage</h5>
+            <p>Storage Used: <span id="percentUsed"></span></p>
+                <meter id="meterPercent" min="0" max="102400" low="25600" high="76800" optimum="20480" value=""></meter>
+                <ul class="scale">
+                    <li style="width: 5%"><span></span></li>
+                    <li><span class="scale">10%</span></li>
+                    <li><span class="scale">20%</span></li>
+                    <li><span class="scale">30%</span></li>
+                    <li><span class="scale">40%</span></li>
+                    <li><span class="scale">50%</span></li>
+                    <li><span class="scale">60%</span></li>
+                    <li><span class="scale">70%</span></li>
+                    <li><span class="scale">80%</span></li>
+                    <li><span class="scale">90%</span></li>
+                    <li style="width: 5%"><span class="scale"></span></li>
+                </ul>
 
 
         </div>
