--- a/options.html
+++ b/options.html
@@ -38,6 +38,10 @@
                 </ul>
 
 
+            <hr>
+            <h5>Credits</h5>
+            <p>Made by <a href="http://generaleye.github.io">Anonymous</a></p>
+
         </div>
 
 
