Added Logo to Options <1.0.2>

--- a/options.html
+++ b/options.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <div id="mainBody">
-            <h3>Options</h3>
+
+            <h3><img id="logo_options" src="icons/logo_32.png" /> Options</h3>
             <hr>
 
             <h5>Stash</h5>
