Updated the Credits field from Anonymous to Generaleye

--- a/options.html
+++ b/options.html
@@ -41,7 +41,7 @@
 
             <hr>
             <h5>Credits</h5>
-            <p>Made by <a href="http://generaleye.github.io">Anonymous</a></p>
+            <p>Made by <a href="http://generaleye.github.io">Generaleye</a></p>
 
         </div>
 
